Test gestion d'articles

--- a/_posts/2025-03-11-test.md
+++ b/_posts/2025-03-11-test.md
@@ -1,9 +1,8 @@
 ---
 layout: post
-title: "Mon premier article"
+title: "test"
 author: "GuiziWeb"
-image: "/img/posts/2025-03-11-bienvenue-sur-mon-premier-post.jpg"
-date: 2023-11-02
+date: 2025-03-8
 categories:
   - Projets
 tags:
